k8s/vault.yml
apiVersion: v1
kind: Pod
metadata:
  name: vault
spec:
  containers:
    - name: vault
      image: hashicorp/vault:1.15.4
      args: ["server", "-dev"]
