k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-backend
  template:
    metadata:
      labels:
        app: ml-backend
    spec:
      containers:
      - name: ml-backend
        image: divypagariya/ml-backend-v2:latest
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: dockerhub-creds

---
apiVersion: v1
kind: Service
metadata:
  name: ml-backend-service
spec:
  selector:
    app: ml-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort


# kubectl port-forward svc/ml-backend-service 8000:8000
