k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-frontend
  template:
    metadata:
      labels:
        app: ml-frontend
    spec:
      containers:
      - name: ml-frontend
        image: divypagariya/ml-frontend:latest
        ports:
        - containerPort: 80   # ✅ must match Nginx port
---
apiVersion: v1
kind: Service
metadata:
  name: ml-frontend-service
spec:
  selector:
    app: ml-frontend
  ports:
  - protocol: TCP
    port: 80        
    targetPort: 80   
  type: NodePort    


# kubectl port-forward service/ml-frontend-service 8090:80
